[gd_scene load_steps=3 format=3 uid="uid://d35ury4ub4f1q"]

[ext_resource type="Script" path="res://addons/textgen_nodes/example/api_test.gd" id="1_6o3rb"]
[ext_resource type="Script" path="res://addons/textgen_nodes/nodes/textgen_chat_node.gd" id="2_igpi0"]

[node name="ApiTest" type="Node2D"]
script = ExtResource("1_6o3rb")

[node name="TextgenChatNode" type="Node" parent="."]
script = ExtResource("2_igpi0")

[connection signal="chat_response" from="TextgenChatNode" to="." method="_on_textgen_chat_node_chat_response"]
[connection signal="new_chunk" from="TextgenChatNode" to="." method="_on_textgen_chat_node_new_chunk"]
